# rsgistry-shuttle

./: Cargo.toml  README.md  Secrets.toml.scaffold  build.rs  build.rs.test
migrations/: 1_schema.sql  2_queue.sql
src/: entry.rs  main.rs  state.rs
src/auth/: mod.rs  types.rs
src/db/: fetch.rs  types.rs  update.rs
