[package]
name = "rsgistry-shuttle" # Change this to your project name
description = "A template registry powered by rsgistry" # Change this too
version = "0.1.0"
edition = "2021"

[dependencies]
scaffold = { package = "rsgistry-scaffold", path = "../scaffold" }
axum = { version = "0.7.4", features = ["json"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9.2.0"
mixin = "0.2.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.112"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["sqlx","postgres"] }
sqlx = { version = "0.7.2", features = ["postgres"] }
tokio = "1.28.2"
tracing = "0.1.40"
cute = "0.3.0"
aide = { version = "0.13.3", features = ["axum", "axum-extra", "axum-headers", "macros"] }
schemars = "0.8.16"
toml = "0.8.12"

[build-dependencies]
flate2 = "1.0.28"
